# BBScript

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  ak_can_motor.cpp  ak_can_motor.h  builtin_robot.c  builtin_robot.h  canmotorimpl.cpp  canmotorimpl.h  cmake_install.cmake  config.xml  feedbackhandler.cpp  feedbackhandler.h  fltkGUI.cpp  fltkGUI.h  itracerecoder.h  macroses.cpp  macroses.h  main.cpp  mainGUI.cpp  mainwnd.cpp  mainwnd.h  minterfaces.h  motor_can_odrv.cpp  motor_can_odrv.h  motor_uart_odrv.cpp  motor_uart_odrv.h  motors_facoty.cpp  motors_facoty.h  mrobotimpl.cpp  mrobotimpl.h  newfile.txt  pcanimpl.cpp  pcanimpl.h  platform_util.cpp  platform_util.h  readme.md  script_bind.cpp  (+3 more)
data/: newfile.txt
gramsrc/: bison_utils.c  bison_utils.h  builtin.c  builtin.h  config.h  gcmc.c  gcmc.h  grammar.h  grammar.tab.c  grammar.yy.c  grammarl.l  grammartypes.h  grammary.h  grammary.y  interpreter.c  utils.c  utils.h  value.c  value.h
odrive/: ODriveCAN.cpp  ODriveCAN.h  ODriveEnums.h  ODriveUART.cpp  ODriveUART.h  can_helpers.hpp  can_simple_messages.hpp
robstride/: Robstride.cpp  Robstride.h
